Update to JDK 22